--- a/src/Forgotpass/Reset.form
+++ b/src/Forgotpass/Reset.form
@@ -202,6 +202,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Reset password"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ResetPasswordActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="jPasswordField1">
             </Component>
