--- a/src/View/ViewUsers.form
+++ b/src/View/ViewUsers.form
@@ -219,7 +219,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="18" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Profile"/>
+                <Property name="text" type="java.lang.String" value="Users"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel14">
