--- a/src/View/AdminDashboard.form
+++ b/src/View/AdminDashboard.form
@@ -222,6 +222,10 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JScrollPane" name="FeedbackScroll">
+      <Properties>
+        <Property name="horizontalScrollBarPolicy" type="int" value="31"/>
+        <Property name="verticalScrollBarPolicy" type="int" value="22"/>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="610" y="120" width="330" height="490"/>
