--- a/src/View/AdminDashboard.form
+++ b/src/View/AdminDashboard.form
@@ -60,7 +60,7 @@
         <Component class="javax.swing.JButton" name="homebtn">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="e8" green="ca" red="d0" type="rgb"/>
+              <Color blue="ff" green="99" red="99" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Home"/>
           </Properties>
