--- a/src/View/CreateEvent.form
+++ b/src/View/CreateEvent.form
@@ -156,7 +156,7 @@
             <Component class="javax.swing.JButton" name="plus_btn">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="e8" green="ca" red="d0" type="rgb"/>
+                  <Color blue="ff" green="99" red="99" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Historic" size="48" style="0"/>
