--- a/src/View/myEvents.form
+++ b/src/View/myEvents.form
@@ -145,7 +145,7 @@
         <Component class="javax.swing.JButton" name="myeventsbtn">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="e8" green="ca" red="d0" type="rgb"/>
+              <Color blue="ff" green="99" red="99" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="My Events"/>
           </Properties>
