--- a/src/View/userDashboard.form
+++ b/src/View/userDashboard.form
@@ -82,7 +82,7 @@
             <Component class="javax.swing.JButton" name="homebtn">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="e8" green="ca" red="d0" type="rgb"/>
+                  <Color blue="ff" green="99" red="99" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Home"/>
               </Properties>
@@ -95,7 +95,7 @@
             <Component class="javax.swing.JButton" name="profilebtn">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="cc" green="af" red="b4" type="rgb"/>
+                  <Color blue="e8" green="ca" red="d0" type="rgb"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Profile"/>
               </Properties>
